@@ -26,24 +26,31 @@ con = None
 con = mdb.connect(host=conf['DB_HOST'], user=conf['DB_USER'], passwd=conf['DB_PASSWORD'], db=conf['DB_NAME'], port=int(conf['DB_PORT']), unix_socket=conf['DB_SOCKET'])
 cur = con.cursor()
 
-#get array of collectionhash
-cur.execute("select value from site where setting = 'grabnzbs'")
-grab = cur.fetchone()
-if int(grab[0]) == 0:
-	sys.exit("GrabNZBs is disabled")
+cur.execute("select value from site where setting = 'partrepair'")
+torun = cur.fetchone()
+if int(torun[0]) != 2:
+	sys.exit("Part Repair Threaded is disabled")
+cur.execute("select (select value from site where setting = 'binarythreads') as a, (select value from site where setting = 'maxpartrepair') as b")
+dbgrab = cur.fetchall()
 
-cur.execute("select collectionhash from nzbs group by collectionhash, totalparts having count(*) >= totalparts")
-datas = cur.fetchall()
-if len(datas) == 0:
-	sys.exit("No NZBs to Grab")
+run_threads = int(dbgrab[0][0])
+maxpartrepair = int(dbgrab[0][1])
+datas = []
+maxtries = 0
 
-#get threads for update_binaries
-cur.execute("select value from site where setting = 'binarythreads'")
-run_threads = cur.fetchone()
+while (len(datas) < run_threads * maxpartrepair) and maxtries < 5:
+	cur.execute("select groupID, numberID from partrepair where attempts between %d and 0 limit %d" %(maxtries, run_threads * maxpartrepair))
+	datas = cur.fetchall()
+	print(maxtries)
+	maxtries = maxtries + 1
 
 #close connection to mysql
 cur.close()
 con.close()
+
+if not datas:
+	print("No Work to Process")
+	sys.exit()
 
 my_queue = queue.Queue()
 time_of_last_run = time.time()
@@ -65,7 +72,7 @@ class queue_runner(threading.Thread):
 			else:
 				if my_id:
 					time_of_last_run = time.time()
-					subprocess.call(["php", pathname+"/../nix_scripts/tmux/bin/grabnzbs.php", ""+my_id])
+					subprocess.call(["php", pathname+"/../nix_scripts/tmux/bin/binaries.php", ""+my_id])
 					time.sleep(.5)
 					self.my_queue.task_done()
 
@@ -80,21 +87,21 @@ def main():
 
 	if True:
 		#spawn a pool of place worker threads
-		for i in range(int(run_threads[0])):
+		for i in range(run_threads):
 			p = queue_runner(my_queue)
 			p.setDaemon(True)
 			p.start()
 
-	print("\n\nGrabNZBs Threaded Started at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
+	print("\nPartrepair Threaded Started at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
 
 	#now load some arbitrary jobs into the queue
-	for gnames in datas:
-		my_queue.put(gnames[0])
+	for release in datas:
+		my_queue.put("%s %s" %(release[0], release[1]))
 
 	my_queue.join()
 
 if __name__ == '__main__':
 	main()
 
-print("\n\nGrabNZBs Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
+print("\nPartrepair Threaded Completed at %s" %(datetime.datetime.now().strftime("%H:%M:%S")))
 print("Running time: %s" %(str(datetime.timedelta(seconds=time.time() - start_time))))
