@@ -1,3 +1,6 @@
+07052013 -> jonnyboy -> tmux - split pp addtional and pp nfo
+						added partrepair threaded
+						added remove stale folders from threaded pp additional
 07052013 -> jonnyboy -> really fixed it, updated tmux-edit with an example of the formula used
 						fixed issue with safe backfill threaded, not using the correct number of threads
 						fixed issue with postprocess threaded nfo
